wip: fixing cypress types
wip: fixing cypress types

--- a/apps/platform-e2e/tsconfig.json
+++ b/apps/platform-e2e/tsconfig.json
@@ -18,6 +18,7 @@
   },
   "include": [
     "src/**/*.ts",
+    "index.d.ts",
     "src/**/*.js",
     "cypress.ci.config.ts",
     "cypress.test.config.ts"
