--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@opentelemetry/sdk-trace-node": "1.15.2",
     "@opentelemetry/sdk-trace-web": "1.18.1",
     "@opentelemetry/semantic-conventions": "1.15.2",
+    "@pinojs/json-colorizer": "^4.0.0",
     "@react-hook/size": "2.1.2",
     "@react-hook/window-size": "3.0.7",
     "@react-hookz/web": "22.0.0",
