--- a/libs/frontend/abstract/domain/tsconfig.lib.json
+++ b/libs/frontend/abstract/domain/tsconfig.lib.json
@@ -12,12 +12,5 @@
     "../../../../node_modules/@nx/react/typings/image.d.ts"
   ],
   "exclude": ["jest.config.ts"],
-  "include": [
-    "**/*.js",
-    "**/*.jsx",
-    "**/*.ts",
-    "**/*.tsx",
-    "../application/src/shared/dto.factory.interface.ts",
-    "../application/src/renderer/action.runner.model.interface.ts"
-  ]
+  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
 }
