--- a/libs/shared/domain-3/project.json
+++ b/libs/shared/domain-3/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "libs/shared/domain/model",
-  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/domain/model/src",
+  "name": "shared-domain-3",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/shared/domain-3/src",
   "projectType": "library",
   "targets": {
     "lint": {
@@ -10,13 +10,13 @@
       "configurations": {
         "ci": {
           "format": "junit",
-          "outputFile": "tmp/reports/lint/libs/shared/domain/model.xml",
+          "outputFile": "tmp/reports/lint/libs/shared/domain-3.xml",
           "quiet": true
         }
       },
       "options": {
         "lintFilePatterns": [
-          "libs/shared/domain/model/**/*.{ts,tsx,js,jsx,graphql}"
+          "libs/shared/domain-3/**/*.{ts,tsx,js,jsx,graphql}"
         ]
       }
     },
@@ -24,7 +24,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/domain/model/jest.config.ts",
+        "jestConfig": "libs/shared/domain-3/jest.config.ts",
         "reporters": ["default"],
         "runInBand": true
       }
@@ -36,7 +36,7 @@
         "color": true,
         "testPathPattern": ["i.spec.ts"],
         "runInBand": true,
-        "jestConfig": "libs/shared/domain/model/jest.config.ts"
+        "jestConfig": "libs/shared/domain-3/jest.config.ts"
       },
       "configurations": {
         "dev": {
@@ -59,7 +59,7 @@
         "memoryLimit": 8192,
         "parallel": 3,
         "testPathIgnorePatterns": ["i.spec.ts"],
-        "jestConfig": "libs/shared/domain/model/jest.config.ts"
+        "jestConfig": "libs/shared/domain-3/jest.config.ts"
       },
       "configurations": {
         "dev": {
