--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -376,10 +376,7 @@
       "@codelab/shared/config": ["libs/shared/config/src/index.ts"],
       "@codelab/shared/data/seed": ["libs/shared/data/seed/src/index.ts"],
       "@codelab/shared/data/test": ["libs/shared/data/test/src/index.ts"],
-      "@codelab/shared/domain/mapper": [
-        "libs/shared/domain/mapper/src/index.ts"
-      ],
-      "@codelab/shared/domain/model": ["libs/shared/domain/model/src/index.ts"],
+      "@codelab/shared/domain": ["libs/shared/domain/src/index.ts"],
       "@codelab/shared/infra/auth0": ["libs/shared/infra/auth0/src/index.ts"],
       "@codelab/shared/infra/cache": ["libs/shared/infra/cache/src/index.ts"],
       "@codelab/shared/infra/logging": [
