--- a/libs/frontend/abstract/application/tsconfig.lib.json
+++ b/libs/frontend/abstract/application/tsconfig.lib.json
@@ -7,7 +7,9 @@
   },
   "include": [
     "src/**/*.ts",
-    "../domain/src/element/element-style.model.interface.ts"
+    "../domain/src/element/element-style.model.interface.ts",
+    "../types/src/model-crud.constant.spec.ts",
+    "../types/src/model-crud.constant.ts"
   ],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
