--- a/libs/frontend/abstract/domain/tsconfig.lib.json
+++ b/libs/frontend/abstract/domain/tsconfig.lib.json
@@ -12,5 +12,12 @@
     "../../../../node_modules/@nx/react/typings/image.d.ts"
   ],
   "exclude": ["jest.config.ts"],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
+  "include": [
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx",
+    "../types/src/model-crud.constant.spec.ts",
+    "../types/src/model-crud.constant.ts"
+  ]
 }
