--- a/package.json
+++ b/package.json
@@ -214,6 +214,7 @@
     "ts-json-schema-generator": "1.2.0",
     "tslib": "2.3.1",
     "twind": "0.16.19",
+    "type-fest": "^4.12.0",
     "typebox-validators": "0.3.5",
     "typescript-json-schema": "0.55.0",
     "uniforms": "3.10.2",
