--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,14 +10,12 @@ commands:
       - run:
           command: ./scripts/nx/reset-cache.sh
           name: Monitor NX Cache Size
-      - run: npx nx run-many --target=build --projects=platform,platform-api,cli,landing,websites --parallel=4 -c ci --verbose --nx-bail
+      - run: npx nx run-many --target=build --projects=platform,platform-api,platform-e2e,cli,landing,websites --parallel=4 -c ci --verbose --nx-bail
       - save_cache:
           key: nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
           name: Save Cache
           paths:
             - ~/project/dist/apps/platform/.next/cache
-            - ~/project/dist/apps/landing/.next/cache
-            - ~/project/dist/apps/websites/.next/cache
       - save_cache:
           key: node-modules-{{ checksum "yarn.lock" }}
           name: Save NPM Cache
