--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -12,7 +12,7 @@ steps:
       name: 'Monitor NX Cache Size'
       command: ./scripts/nx/reset-cache.sh
   # Can't use `yarn cli` doesn't exist yet
-  - run: npx nx run-many --target=build --projects=platform,platform-api,cli,landing,websites --parallel=4 -c ci --verbose --nx-bail
+  - run: npx nx run-many --target=build --projects=platform,platform-api,platform-e2e,cli,landing,websites --parallel=4 -c ci --verbose --nx-bail
   - save_cache:
       name: 'Save Cache'
       key: nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
