wip: adding sidebar key types
wip: adding sidebar key types

--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "jquery": "3.6.4",
     "jwks-rsa": "3.0.1",
     "lodash": "4.17.21",
+    "make-plural": "^7.3.0",
     "memfs": "4.2.0",
     "micro": "10.0.1",
     "mobx": "6.11.0",
