--- a/.circleci/config/commands/install-terraform.yml
+++ b/.circleci/config/commands/install-terraform.yml
@@ -16,8 +16,10 @@ steps:
         curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
         sudo apt-add-repository --yes "deb [arch=$(dpkg --print-architecture)] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
 
+
         sudo apt update
-        sudo apt install terraform=1.6.3
+        sudo apt install terraform=1.6.3-*
+
   # - save_cache:
   #     name: 'Save Terraform Cache'
   #     key: terraform-cache-1.3.9
