refactor: rename key for sidebar

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,8 +66,9 @@ commands:
             curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
             sudo apt-add-repository --yes "deb [arch=$(dpkg --print-architecture)] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
 
+
             sudo apt update
-            sudo apt install terraform=1.6.3
+            sudo apt install terraform=1.6.3-*
           name: Install Terraform
   restore-infra-workspace:
     description: Restore Infra Workspace
