refactor: use builder pattern for data-cy

--- a/apps/platform/tsconfig.json
+++ b/apps/platform/tsconfig.json
@@ -23,7 +23,8 @@
       "@fancyapps/ui",
       "cypher",
       "styled-components",
-      "@editorjs"
+      "@editorjs",
+      "data-cy"
     ],
     "jsx": "preserve"
   },
