--- a/.circleci/config/commands/install-terraform.yml
+++ b/.circleci/config/commands/install-terraform.yml
@@ -11,11 +11,17 @@ steps:
       # https://developer.hashicorp.com/terraform/tutorials/aws-get-started/install-cli
       name: 'Install Terraform'
       command: |
-        sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys DA418C88A3219F7B
+        sex -x
 
-        curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-        sudo apt-add-repository --yes "deb [arch=$(dpkg --print-architecture)] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+        sudo apt-get update && sudo apt-get install -y gnupg software-properties-common
 
+        wget -O- https://apt.releases.hashicorp.com/gpg | \
+        gpg --dearmor | \
+        sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg > /dev/null
+
+        gpg --no-default-keyring \
+        --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg \
+        --fingerprint
 
         sudo apt update
         sudo apt install terraform=1.6.3-*
