--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -8,12 +8,13 @@ steps:
   - run:
       name: 'Monitor NX Cache Size'
       command: ./scripts/nx/reset-cache.sh
-  # Can't use `pnpm run cli` doesn't exist yet
+  # Can't use `pnpm cli` doesn't exist yet
   - run: npx nx run-many --target=build --projects=platform,platform-api,platform-e2e,cli,landing,websites --parallel=4 -c ci --verbose --nx-bail
   - save_cache:
       name: 'Save NX Cache'
       key: nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
       paths:
+        - ~/project/.nx/cache
         - ~/project/dist/apps/platform/.next/cache
         # - ~/project/dist/apps/landing/.next/cache
         # - ~/project/dist/apps/websites/.next/cache
