--- a/.circleci/config/commands/restore-workspace.yml
+++ b/.circleci/config/commands/restore-workspace.yml
@@ -2,18 +2,19 @@ description: 'Restore Workspace'
 steps:
   - checkout
   - attach_workspace:
-      at: ..
+      at: ~/project
   - restore_cache:
       name: 'Restore node_modules Cache'
       keys:
         - node_modules-cache-{{ checksum "pnpm-lock.yaml" }}
-  # - restore_cache:
-  #     name: 'Restore Cache'
-  #     keys:
-  #       - pnpm-cache-{{ checksum "pnpm-lock.yaml" }}
-  #       - node_modules-cache-{{ checksum "pnpm-lock.yaml" }}
-  #       - nvm-cache-{{ checksum ".nvmrc" }}
-  #       # This is needed for e2e to run, but we add it here for simplicity
-  #       - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
+  - restore_cache:
+      name: 'Restore NVM Cache'
+      keys:
+        - nvm-cache-{{ checksum ".nvmrc" }}
+  - restore_cache:
+      name: 'Restore NX Cache'
+      keys:
+        # This is needed for e2e to run, but we add it here for simplicity
+        - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
   - setup-env
   - install-pnpm
