--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
     "@neo4j/graphql": "4.4.5",
     "@neo4j/graphql-ogm": "4.4.5",
     "@nestjs/apollo": "11.0.6",
-    "@nestjs/bull": "0.6.3",
     "@nestjs/common": "10.0.4",
     "@nestjs/config": "2.3.2",
     "@nestjs/core": "10.0.4",
@@ -163,7 +162,7 @@
     "react-sticky-box": "2.0.0",
     "react-stickynode": "4.1.0",
     "react-syntax-highlighter": "15.5.0",
-    "recoil": "0.7.4",
+    "recoil": "0.7.7",
     "reflect-metadata": "0.1.13",
     "rooks": "7.6.1",
     "rxjs": "7.8.0",
@@ -339,6 +338,7 @@
     "nx-cloud": "16.5.2",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.24",
+    "process": "^0.11.10",
     "tailwindcss": "3.4.1",
     "ts-essentials": "9.1.2",
     "ts-morph": "19.0.0",
