--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,11 @@ commands:
       - run:
           command: ./scripts/nx/reset-cache.sh
           name: Monitor NX Cache Size
-      - run: npx nx run-many --target=build --projects=platform,platform-api,platform-e2e,cli,landing,websites --parallel=4 -c ci --verbose --nx-bail
+      - run: npx nx run-many --target=build --projects=platform,platform-api,platform-e2e,cli --parallel=3 -c ci --verbose --nx-bail
       - save_cache:
           key: nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
           name: Save NX Cache
           paths:
-            - ~/project/.nx/cache
             - ~/project/dist/apps/platform/.next/cache
   install-nvm:
     steps:
@@ -106,11 +105,19 @@ commands:
     steps:
       - checkout
       - attach_workspace:
-          at: ..
+          at: ~/project
       - restore_cache:
           keys:
             - node_modules-cache-{{ checksum "pnpm-lock.yaml" }}
           name: Restore node_modules Cache
+      - restore_cache:
+          keys:
+            - nvm-cache-{{ checksum ".nvmrc" }}
+          name: Restore NVM Cache
+      - restore_cache:
+          keys:
+            - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
+          name: Restore NX Cache
       - setup-env
       - install-pnpm
   setup-env:
@@ -382,8 +389,10 @@ jobs:
       - build-repo
       - persist_to_workspace:
           paths:
-            - project/dist/apps/cli
-          root: ~/
+            - dist/apps/cli
+            - dist/apps/platform
+            - .nx/cache/lockfile.hash
+          root: ~/project
   unit:
     executor: docker-node
     resource_class: large
