--- a/.circleci/config/jobs/setup-workspace.yml
+++ b/.circleci/config/jobs/setup-workspace.yml
@@ -11,9 +11,11 @@ steps:
   # This is required since dist depends on code other than pnpm-lock.yam
   # Instead of this can use nx caching
   - persist_to_workspace:
-      root: ~/
+      root: ~/project
       paths:
         # Using too much workspace storage, eating up credits
         # - project/node_modules
-        # Seems only cli is needed, we can use nx cloud for others
-        - project/dist/apps/cli
+        - dist/apps/cli
+        - dist/apps/platform
+        # This used as checksum to restore nx cache for e2e
+        - .nx/cache/lockfile.hash
