--- a/libs/frontend/abstract/application/tsconfig.lib.json
+++ b/libs/frontend/abstract/application/tsconfig.lib.json
@@ -5,11 +5,6 @@
     "declaration": true,
     "types": ["node"]
   },
-  "include": [
-    "src/**/*.ts",
-    "../domain/src/element/element-style.model.interface.ts",
-    "../types/src/model-crud.constant.spec.ts",
-    "../types/src/model-crud.constant.ts"
-  ],
+  "include": ["src/**/*.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
