--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -14,7 +14,7 @@ steps:
       name: 'Save NX Cache'
       key: nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
       paths:
-        # - ~/project/.nx/cache
+        - ~/project/.nx/cache
         - ~/project/dist/apps/cli
         # Require this to run e2e
         - ~/project/dist/apps/platform/.next/cache
