--- a/package.json
+++ b/package.json
@@ -338,7 +338,7 @@
     "nx-cloud": "16.5.2",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.24",
-    "process": "^0.11.10",
+    "process": "0.11.10",
     "tailwindcss": "3.4.1",
     "ts-essentials": "9.1.2",
     "ts-morph": "19.0.0",
