--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,7 +247,7 @@ jobs:
     steps:
       - restore-workspace
       - run:
-          command: pnpm cli tasks lint --stage ci --verbose
+          command: pnpm cli tasks lint --stage ci
           name: Run Lint on Repository
       - run:
           command: pnpm cli tasks commitlint --stage ci
