--- a/.circleci/config/jobs/lint.yml
+++ b/.circleci/config/jobs/lint.yml
@@ -7,7 +7,7 @@ steps:
   - restore-workspace
   - run:
       name: 'Run Lint on Repository'
-      command: pnpm cli tasks lint --stage ci --verbose
+      command: pnpm cli tasks lint --stage ci
   - run:
       name: 'Commitlint'
       command: pnpm cli tasks commitlint --stage ci
