--- a/.circleci/config/commands/restore-infra-workspace.yml
+++ b/.circleci/config/commands/restore-infra-workspace.yml
@@ -7,6 +7,14 @@ steps:
       name: 'Restore Cache'
       keys:
         - pnpm-cache-{{ checksum "pnpm-lock.yaml" }}
+  - restore_cache:
+      name: 'Restore NVM Cache'
+      keys:
         - nvm-cache-{{ checksum ".nvmrc" }}
+  - restore_cache:
+      name: 'Restore NX Cache'
+      keys:
+        # This is needed for e2e to run, but we add it here for simplicity
+        - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
   - install-terraform
   - setup-env
