--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ commands:
             --fingerprint
 
             sudo apt update
-            sudo apt install terraform=1.6.3-*
+            sudo apt install terraform=1.6.3
           name: Install Terraform
   restore-infra-workspace:
     description: Restore Infra Workspace
