--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@fortawesome/pro-solid-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "latest",
     "@graphql-codegen/plugin-helpers": "5.0.3",
+    "@graphql-hive/client": "^0.29.0",
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
     "@mailchimp/mailchimp_marketing": "3.0.80",
@@ -204,6 +205,7 @@
     "@graphql-codegen/typescript-graphql-request": "6.2.0",
     "@graphql-codegen/typescript-operations": "4.2.0",
     "@graphql-eslint/eslint-plugin": "3.20.1",
+    "@graphql-hive/cli": "^0.34.0",
     "@hon2a/cypress-without": "2.1.0",
     "@ls-lint/ls-lint": "2.0.0",
     "@nestjs/cli": "10.0.2",
