--- a/apps/platform/tsconfig.json
+++ b/apps/platform/tsconfig.json
@@ -26,7 +26,8 @@
       "@editorjs",
       "data-cy"
     ],
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "jsxImportSource": "@welldone-software/why-did-you-render"
   },
   // "references": [
   //   {
