--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -60,8 +60,76 @@ services:
       - NEO4J_AUTH=neo4j/password
     restart: unless-stopped
 
+  # Observability, used for tracing
+  jaeger-all-in-one:
+    container_name: jaeger-all-in-one
+    image: jaegertracing/all-in-one:1.55
+    restart: always
+    ports:
+      # Expoes Jaeger UI for the user
+      - '16686:16686'
+      # Exposed for metrics to be used by Prometheus
+      - '14269:14269'
+      - '14268'
+      - '14250'
+
+  # Zipkin
+  # zipkin-all-in-one:
+  #   container_name: zipkin-all-in-one
+  #   image: openzipkin/zipkin:latest
+  #   restart: always
+  #   ports:
+  #     - '9411:9411'
+
+  # Observability, used for metrics
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus:v2.46.0
+    restart: always
+    volumes:
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
+    ports:
+      - '9090:9090'
+
+  # Collectors, used for collecting metrics and traces
+  opentelemetry:
+    container_name: opentelemetry
+    image: otel/opentelemetry-collector:0.96.0
+    restart: always
+    command: ['--config=/etc/otelcol/config.yaml']
+    volumes:
+      - ./opentelemetry.yaml:/etc/otelcol/config.yaml
+    ports:
+      - '1888:1888' # pprof extension
+      - '8888:8888' # Prometheus metrics exposed by the collector
+      - '8889:8889' # Prometheus exporter metrics
+      - '13133:13133' # health_check extension
+      - '4317:4317' # OTLP gRPC receiver
+      - '4318:4318' # OTLP HTTP receiver
+      - '55679:55679' # zpages extension
+    depends_on:
+      - jaeger-all-in-one
+      - prometheus
+      # - zipkin
+
+  # grafana:
+  #   container_name: grafana
+  #   image: grafana/grafana:10.0.3
+  #   restart: always
+  #   ports:
+  #     - '3100:3000'
+  #   volumes:
+  #     - grafana-storage:/var/lib/grafana
+  #   environment:
+  #     - GF_SECURITY_ADMIN_USER=admin
+  #     - GF_SECURITY_ADMIN_PASSWORD=secret
+  #   depends_on:
+  #     - prometheus
+
 volumes:
   codelab-neo4j:
     name: codelab-neo4j
   codelab-neo4j-test:
     name: codelab-neo4j-test
+  # grafana-storage:
+  #   name: grafana-storage
