--- a/package.json
+++ b/package.json
@@ -83,6 +83,10 @@
     "@nestjs/platform-express": "10.0.4",
     "@nestjs/swagger": "7.1.2",
     "@next/bundle-analyzer": "14.0.2",
+    "@opentelemetry/api": "^1.8.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.43.0",
+    "@opentelemetry/sdk-node": "^0.49.1",
+    "@opentelemetry/sdk-trace-base": "^1.22.0",
     "@pinojs/json-colorizer": "4.0.0",
     "@react-hookz/web": "22.0.0",
     "@react-spring/web": "9.7.3",
