--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,10 +220,10 @@ jobs:
       - run: pnpm cypress verify
       - run:
           command: |
+            CI_BUILD_ID=$(echo ${CIRCLE_SHA1:0:8})-${CIRCLE_BUILD_NUM}
             echo "CI Build ID: $CI_BUILD_ID"
             pnpm nx e2e platform-e2e -c ci --ci-build-id=$CI_BUILD_ID
-          environment:
-            CI_BUILD_ID: ${CIRCLE_SHA1:0:8}-${CIRCLE_BUILD_NUM}
+          environment: null
           name: Run E2E Tests
       - store_artifacts:
           destination: cypress/videos
