--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -15,8 +15,8 @@ steps:
       name: 'Run E2E Tests'
       environment:
         # https://github.com/cypress-io/circleci-orb/issues/386
-        CI_BUILD_ID: ${CIRCLE_SHA1:0:8}-${CIRCLE_BUILD_NUM}
       command: |
+        CI_BUILD_ID=$(echo ${CIRCLE_SHA1:0:8})-${CIRCLE_BUILD_NUM}
         echo "CI Build ID: $CI_BUILD_ID"
         pnpm nx e2e platform-e2e -c ci --ci-build-id=$CI_BUILD_ID
   - store_artifacts:
