--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -16,7 +16,8 @@ steps:
       environment:
         # https://github.com/cypress-io/circleci-orb/issues/386
       command: |
-        CI_BUILD_ID=$(echo ${CIRCLE_SHA1:0:8})-${CIRCLE_BUILD_NUM}
+        echo 'export CI_BUILD_ID="$(echo ${CIRCLE_SHA1:0:8})-${CIRCLE_BUILD_NUM}"' >> "$BASH_ENV"
+        source "$BASH_ENV"
         echo "CI Build ID: $CI_BUILD_ID"
         pnpm nx e2e platform-e2e -c ci --ci-build-id=$CI_BUILD_ID
   - store_artifacts:
