--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -60,18 +60,46 @@ services:
       - NEO4J_AUTH=neo4j/password
     restart: unless-stopped
 
+  # Collectors, used for collecting metrics and traces
+  opentelemetry:
+    container_name: opentelemetry
+    image: otel/opentelemetry-collector:0.96.0
+    restart: unless-stopped
+    command: ['--config=/etc/otelcol/config.yaml']
+    volumes:
+      - ./otel-collector.yaml:/etc/otelcol/config.yaml
+    ports:
+      - '1888:1888' # pprof extension
+      - '8888:8888' # Prometheus metrics exposed by the collector
+      - '8889:8889' # Prometheus exporter metrics
+      - '13133:13133' # health_check extension
+      - '55679:55679' # zpages extension
+    depends_on:
+      - jaeger-all-in-one
+      - prometheus
+    # environment:
+    # - OTEL_EXPORTER_OTLP_ENDPOINT=jaeger-all-in-one:4318
+    # - zipkin
+
   # Observability, used for tracing
   jaeger-all-in-one:
     container_name: jaeger-all-in-one
     image: jaegertracing/all-in-one:1.55
-    restart: always
+    restart: unless-stopped
     ports:
       # Expoes Jaeger UI for the user
       - '16686:16686'
       # Exposed for metrics to be used by Prometheus
       - '14269:14269'
-      - '14268'
-      - '14250'
+      # https://opentelemetry.io/docs/languages/js/exporters/#jaeger
+      - '4317:4317' # OTLP gRPC receiver
+      - '4318:4318' # OTLP HTTP receiver
+      # - '14268'
+      # - '14250'
+    environment:
+      # Native support for OpenTelemetry in Jaeger. In the traces.exporters we no longer specify jaeger, but otlp
+      # https://stackoverflow.com/questions/77305777/opentelemetry-collector-failing-to-export-to-jaeger-via-otlp
+      - COLLECTOR_OTLP_ENABLED=true
 
   # Zipkin
   # zipkin-all-in-one:
@@ -85,32 +113,11 @@ services:
   prometheus:
     container_name: prometheus
     image: prom/prometheus:v2.46.0
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
     ports:
       - '9090:9090'
-
-  # Collectors, used for collecting metrics and traces
-  opentelemetry:
-    container_name: opentelemetry
-    image: otel/opentelemetry-collector:0.96.0
-    restart: always
-    command: ['--config=/etc/otelcol/config.yaml']
-    volumes:
-      - ./opentelemetry.yaml:/etc/otelcol/config.yaml
-    ports:
-      - '1888:1888' # pprof extension
-      - '8888:8888' # Prometheus metrics exposed by the collector
-      - '8889:8889' # Prometheus exporter metrics
-      - '13133:13133' # health_check extension
-      - '4317:4317' # OTLP gRPC receiver
-      - '4318:4318' # OTLP HTTP receiver
-      - '55679:55679' # zpages extension
-    depends_on:
-      - jaeger-all-in-one
-      - prometheus
-      # - zipkin
 
   # grafana:
   #   container_name: grafana
@@ -125,20 +132,6 @@ services:
   #     - GF_SECURITY_ADMIN_PASSWORD=secret
   #   depends_on:
   #     - prometheus
-  agent:
-    container_name: newrelic-infra
-    build:
-      context: .
-      dockerfile: newrelic-infra.dockerfile
-    cap_add:
-      - SYS_PTRACE
-    network_mode: host
-    pid: host
-    privileged: true
-    volumes:
-      - '/:/host:ro'
-      - '/var/run/docker.sock:/var/run/docker.sock'
-    restart: unless-stopped
 
 volumes:
   codelab-neo4j:
