--- a/package.json
+++ b/package.json
@@ -86,8 +86,16 @@
     "@next/bundle-analyzer": "14.0.2",
     "@opentelemetry/api": "^1.8.0",
     "@opentelemetry/auto-instrumentations-node": "^0.43.0",
+    "@opentelemetry/context-zone": "^1.22.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.49.1",
+    "@opentelemetry/instrumentation": "^0.49.1",
+    "@opentelemetry/instrumentation-document-load": "^0.36.0",
+    "@opentelemetry/propagator-b3": "^1.22.0",
+    "@opentelemetry/resources": "^1.22.0",
     "@opentelemetry/sdk-node": "^0.49.1",
     "@opentelemetry/sdk-trace-base": "^1.22.0",
+    "@opentelemetry/sdk-trace-web": "^1.22.0",
+    "@opentelemetry/semantic-conventions": "^1.22.0",
     "@pinojs/json-colorizer": "4.0.0",
     "@react-hookz/web": "22.0.0",
     "@react-spring/web": "9.7.3",
