--- a/apps/platform/.eslintrc.json
+++ b/apps/platform/.eslintrc.json
@@ -18,8 +18,8 @@
       "rules": {
         "@next/next/no-html-link-for-pages": ["error", "apps/platform/pages"],
         "jsx-a11y/anchor-is-valid": "off",
-        "react/jsx-no-useless-fragment": "off",
-        "react/display-name": "off"
+        "react/jsx-no-useless-fragment": "off"
+        // "react/display-name": "off"
       }
     },
     {
