--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "codelab",
   "engines": {
     "node": ">=18.17.0",
+    "yarn": "please-use-pnpm",
     "npm": "please-use-pnpm",
     "pnpm": ">=8.15.0"
   },
+  "packageManager": "pnpm@8.15.4",
   "version": "0.0.1",
   "license": "MIT",
   "sideEffects": false,
