--- a/.docker/docker-compose.build.yaml
+++ b/.docker/docker-compose.build.yaml
@@ -3,15 +3,30 @@
 #
 # `env_file` is used to find env to inject into container at runtime
 #
+# But won't work for CI
+#
 version: '3.8'
 services:
   platform:
     build:
       context: ../
       dockerfile: ${PWD}/.docker/platform.Dockerfile
+      args:
+        - NEXT_PUBLIC_PLATFORM_HOST=${NEXT_PUBLIC_PLATFORM_HOST}
     # image: codelabai/codelab:${DOCKER_TAG_VERSION}
     # This is used after image has been built
-    env_file:
-      - ../.env
-    environment:
-      - NODE_ENV=development
+    # env_file:
+    #   - ../.env
+
+    # environment:
+    #   - NODE_ENV=development
+  platform-api:
+    build:
+      context: ../
+      dockerfile: ${PWD}/.docker/platform-api.Dockerfile
+    # image: codelabai/codelab:${DOCKER_TAG_VERSION}
+    # This is used after image has been built
+    # env_file:
+    #   - ../.env
+    # environment:
+    #   - NODE_ENV=development
